refactored js to use css class to hide and show elements to prevent flickering effect on page load, other minor style changes

--- a/src/main/resources/static/css/unscramble.css
+++ b/src/main/resources/static/css/unscramble.css
@@ -1,5 +1,5 @@
-.ui-draggable-hover {
-
+.hide {
+    display: none;
 }
 
 .drop-zone {
